          - changed first day of week to monday, can be reverted by setting first_day_of_week=0
          - new reporting module
            - put both reports edit steps into one page
            - changed report templates to html
            - changed to flot graphing library
            - changed to wkhtml2pdf as pdf generator
            - added html preview of pdf reports
            - added new report option for sla decimal points and graph min sla
          - Bug Fixes
            - fixed problem when using logfilecache in combination with connection pool

1.60.2   Wed Dec 19 11:23:28 CET 2012
          - Bug Fixes
            - hide site panel with only one backend

1.60     Tue Dec 18 18:26:47 CET 2012
          - added http backend type which connects to another thruk instance
          - made sitepanel configurable
          - config tool:
            - changed source editor to linedtextarea because of IE compatibility
          - logcache:
            - renamed logcache cli commands
            - changed mongodb logcache to seperate collection per backend
            - added cli command logcachestats to display logcache statistics
            - added cli command logcacheauthupdate to update authorization information
            - fixed mongodb logcache authorization
          - Bug Fixes
            - fixed connection test for new backends
            - retain order of backends when not using sections
            - fixed deselecting unavailable backends
            - fixed jumping cursor in search input in IE

1.58     Wed Nov 21 12:51:29 CET 2012
          - use regex matching in search preview too
          - added new config option first_day_of_week
          - added column filter in configuration page (Thibault Cohen)
          - faster and more useably mouseover in host/service lists
          - added configuration only backends
          - show link to hostdetails when no services match
          - added filter by number of services