@@ -10,7 +10,7 @@
         { 'graph_min_sla'               => [ 'Graph SLA %',           'int',             '90'                  , '', 1  ] },
         { 'decimals'                    => [ 'Decimal Points',        'int',             '2'                   , '', 1  ] },
         { 'assumeinitialstates'         => [ 'Assume Initial States', 'yes_no',          'yes'                          ] },
-        { 'initialassumedservicestate'  => [ 'Initial Assumed State', 'svc_initialassumedstate',          '6'           ] },
+        { 'initialassumedservicestate'  => [ 'Initial Assumed State', 'svc_initialassumedstate',          '0'           ] },
         { 'includesoftstates'           => [ 'Include Soft States',   'yes_no',          'no'                           ] },
         { 'unavailable'                 => [ 'Unavailable States',    'svc_unavailable', ['critical', 'unknown']        ] },
     ];
