@@ -9,8 +9,8 @@
         { 'graph_min_sla'           => [ 'Graph SLA %',                'int',             '90'                    , '', 1 ] },
         { 'decimals'                => [ 'Decimal Points',             'int',             '2'                     , '', 1 ] },
         { 'assumeinitialstates'     => [ 'Assume Initial States',      'yes_no',          'yes'                           ] },
-        { 'initialassumedhoststate' => [ 'Initial Assumed State',      'hst_initialassumedstate',          '3'            ] },
-        { 'initialassumedservicestate'  => [ 'Initial Assumed State',  'svc_initialassumedstate',          '6'            ] },
+        { 'initialassumedhoststate' => [ 'Initial Assumed State',      'hst_initialassumedstate',          '0'            ] },
+        { 'initialassumedservicestate'  => [ 'Initial Assumed State',  'svc_initialassumedstate',          '0'            ] },
         { 'includesoftstates'       => [ 'Include Soft States',        'yes_no',          'no'                            ] },
         { 'unavailable'             => [ 'Host Unavailable States',    'hst_unavailable', ['down', 'unreachable']         ] },
         { 'unavailable'             => [ 'Service Unavailable States', 'svc_unavailable', ['critical', 'unknown']         ] },
